slick slider homepage WITH BUGS
BUGS:
- slick-track is long? giving extra space to the right
- dots off center
- images won't self-center
- images are actually taller than the max-height now, so logo name is being cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,6 +599,9 @@ video {
 .h-full {
   height: 100%;
 }
+.max-h-32 {
+  max-height: 8rem;
+}
 .min-h-\[50vh\] {
   min-height: 50vh;
 }
@@ -625,6 +628,9 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.min-w-32 {
+  min-width: 8rem;
 }
 .max-w-24 {
   max-width: 6rem;
@@ -700,6 +706,9 @@ video {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-7 {
+  gap: 1.75rem;
 }
 .gap-8 {
   gap: 2rem;
@@ -1037,6 +1046,13 @@ video {
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1352,6 +1368,15 @@ h3 strong {
     z-index: 10;
     position: relative;
   }
+
+/* Slick Slider Styles */
+.slider-container {
+  padding: 8%;
+}
+
+.slick-dots {
+  bottom: 0%;
+}
 
 /* Info Card Styles */
 .info-card-image {
